# c_cpp_coursework

./: .gitignore  CMakeLists.txt
c/week-1/: ex-1.c  ex-3.md  ex-4.md  ex-6.c  ex-7.c  ex-8.c  ex-9.c
c/week-2/: ex-13.c  ex-14.c  ex-15.c  ex-16.c  ex-17.c
c/week-3/: ex-20.c  ex-22.c  ex-23.c  ex-24.c
c/week-4/: ex-25.c  ex-26.c  ex-27.c  ex-28.c  ex-29.c  ex-30.c  ex-31.c  ex-32.c
c/week-5/: ex-33.c  ex-34.c  ex-36.c  ex-37.c
c/week-6/: ex-40.c  ex-41.c  ex-42.c  ex-43.c  ex-44.c  ex-45.c  ex-46.c  ex-47.c  palindroom_perm.c
cpp/week-1/: 5_regels.cpp  ex-101.cpp  ex-102.cpp  ex-103.cpp  ex-104.cpp  ex-105.cpp  ex-106.cpp  ex-107.cpp  ex-108.cpp  reverse_str.cpp
cpp/week-1/vbn_H1_C++/: bestand_vb.cpp  char_inlezen_vb1.cpp  char_inlezen_vb2.cpp  io_vb.cpp  namespace_vb.cpp  nmspc.cpp  string_inlezen_vb1.cpp  string_inlezen_vb2.cpp  string_inlezen_vb3.cpp  string_vb.cpp  template_voorbeeld.cpp  vb_default_parameters.cpp
cpp/week-2/: containers.h  ex-109.cpp  ex-110.cpp  ex-111.cpp  ex-112.cpp  ex-113.cpp  ex-114.cpp  ex-115.cpp  ex-116.cpp  ex-117.cpp  ex-118.cpp  ex-119.cpp  ex-120.cpp
cpp/week-2/vbn_H3_C++/: vb_list.cpp  vb_map.cpp  vb_multiset.cpp  vb_priorqueue.cpp  vb_queue.cpp  vb_set.cpp  vb_stack.cpp  vb_vector.cpp
cpp/week-3/: breuk.cpp  containers.h  ex-121.cpp  ex-122.cpp  ex-123.cpp
cpp/week-4/: ex-124.cpp  ex-125.cpp  ex-126.cpp  ex-127.cpp  ex-128.cpp  ex-129.cpp
cpp/week-5/: ex-130.cpp  ex-131.cpp  ex-132.cpp  ex-133.cpp  figuren.h
fixtures/: acht.txt  drie.txt  een.txt  elf.txt  figuren.h  negen.txt  niks.txt  tien.txt  twaalf.txt  twee.txt  vijf.txt  zeven.txt
pointers/: 2-array-pointers.c
test/: test.c
week-1/: ex-10.c  ex-11.c  ex-2.c  ex-3.md  ex-4.c  ex-5.md  ex-7.c  ex-8.c  ex-9.c
week-2/: ex-12.c  ex-13.c  ex-14.c  ex-15.c  ex-16.c  ex-17.c
week-3/: ex-18.md  ex-19.c  ex-21.c  ex-22.c  ex-23.c  ex-24.c
week-4/: ex-25.c  ex-26.c  ex-27.c  ex-28.c  ex-29.c  ex-30.c  ex-31.c  ex-32.c
week-5/: ex-33.c  ex-34.c  ex-35.c  ex-36.c  ex-37  ex-37.c  ex-38.c
week-6/: ex-39.c  ex-40.c  ex-41.c  ex-42.c  ex-43.c  ex-44.c  ex-45.c  ex-46  ex-46.c  ex-47.c
(+47 files in other folders)
