cmake_minimum_required(VERSION 3.14)
project(exercises C)

set(CMAKE_C_STANDARD 99)

add_executable(week-1_ex-1 week-1/ex-1.c)
add_executable(week-1_ex-2 week-1/ex-2.c)
add_executable(week-1_ex-4 ./week-1/ex-4.c)
add_executable(week-1_ex-6 ./week-1/ex-6.c)
add_executable(week-1_ex-7 ./week-1/ex-7.c)
add_executable(week-1_ex-8 ./week-1/ex-8.c)
add_executable(week-1_ex-9 ./week-1/ex-9.c)
add_executable(week-1_ex-10 ./week-1/ex-10.c)
add_executable(week-1_ex-11 ./week-1/ex-11.c)
add_executable(week-2_ex-12 ./week-2/ex-12.c)
add_executable(week-2_ex-13 ./week-2/ex-13.c)
add_executable(week-2_ex-14 ./week-2/ex-14.c)
add_executable(week-2_ex-15 ./week-2/ex-15.c)
add_executable(week-2_ex-16 ./week-2/ex-16.c)
add_executable(week-2_ex-17 ./week-2/ex-17.c)
add_executable(week-3_ex-23 ./week-3/ex-23.c)
add_executable(week-3_ex-24 ./week-3/ex-24.c)
add_executable(week-4_ex-26 ./week-4/ex-26.c)
add_executable(week-4_ex-28 ./week-4/ex-28.c)
add_executable(week-4_ex-29 ./week-4/ex-29.c)
add_executable(week-4_ex-30 ./week-4/ex-30.c)
add_executable(week-4_ex-31 ./week-4/ex-31.c)
add_executable(week-4_ex-32 ./week-4/ex-32.c)
add_executable(week-5_ex-34 ./week-5/ex-34.c)
add_executable(week-5_ex-35 ./week-5/ex-35.c)
add_executable(week-5_ex-36 ./week-5/ex-36.c)